# MindReview

./: TODO.txt  docker-compose.yaml
server/: pyproject.toml
server/USER_FILES/1/: 321321321 (9).xlsx  321321321.xlsx
server/USER_FILES/3/: 321321321 (18).xlsx
server/mr_analyze/: Dockerfile  pyproject.toml
server/mr_analyze/src/adapters/database/: mapping.py  sa_session.py  settings.py
server/mr_analyze/src/adapters/database/repositories/: __init__.py  analyze_repo.py  data_repo.py
server/mr_analyze/src/adapters/database/tables/: common.py  data.py  logs.py
server/mr_analyze/src/adapters/nlp/: nlp.py
server/mr_analyze/src/adapters/rpc/: __init__.py  consumer.py  producer.py
server/mr_analyze/src/application/: constants.py  utils.py
server/mr_analyze/src/application/analyze/: entities.py  interfaces.py  services.py
server/mr_analyze/src/application/collection/: entities.py  interfaces.py  services.py
server/mr_analyze/src/composites/: analyze.py
server/mr_api/: .gitignore  Dockerfile  pyproject.toml
server/mr_api/src/adapters/api/: app.py
server/mr_api/src/adapters/api/analyze/: dependencies.py  routes.py  schemas.py
server/mr_api/src/adapters/api/auth/: dependencies.py  routes.py  schemas.py  token.py
server/mr_api/src/adapters/api/data/: dependencies.py  routes.py  schemas.py
server/mr_api/src/adapters/api/feedback/: dependencies.py  routes.py  schemas.py
server/mr_api/src/adapters/api/payment/: dependencies.py  routes.py
server/mr_api/src/adapters/api/system/: dependencies.py  routes.py  schemas.py
server/mr_api/src/adapters/api/user/: dependencies.py  routes.py  schemas.py
server/mr_api/src/adapters/database/: __init__.py  mapping.py  settings.py
server/mr_api/src/adapters/database/alembic/: env.py
server/mr_api/src/adapters/database/migrations/: 2024_03_01_07_51_49_add_tables.py  2024_03_03_12_09_50_add_new_column_in_cities.py  2024_03_03_12_19_58_add_russian_cities.py  (+4 more)
server/mr_api/src/adapters/email/: sender.py  settings.py
server/mr_api/src/adapters/excel/: manager.py
server/mr_api/src/adapters/logger/: settings.py
server/mr_api/src/adapters/notify/: websocket.py
server/mr_api/src/adapters/requests/: reviews.py
server/mr_api/src/adapters/rpc/: __init__.py  consumer.py  manager.py  producer.py  settings.py
server/mr_api/src/application/: constants.py  exceptions.py  utils.py
server/mr_api/src/application/auth/: interfaces.py  services.py
server/mr_api/src/application/data/: entities.py  interfaces.py  services.py
server/mr_api/src/application/feedback/: entities.py  interfaces.py  services.py
server/mr_api/src/application/payment/: services.py
server/mr_api/src/application/review/: entities.py  interfaces.py  services.py
server/mr_api/src/application/system/: entities.py  interfaces.py  services.py
server/mr_api/src/application/user/: entities.py  interfaces.py  services.py
server/src/adapters/api/: app.py  settings.py
server/src/adapters/api/auth/: dependencies.py  routes.py  schemas.py
server/src/adapters/database/: __init__.py  tables.py
server/src/adapters/database/alembic/: env.py
server/src/adapters/database/migrations/: 2024_02_22_11_03_51_add_tables.py  2024_02_22_11_05_50_add_tables.py  2024_02_22_13_18_04_add_tables.py
server/src/adapters/database/repositories/: user_repo.py
server/src/application/: constants.py  exceptions.py  utils.py
server/src/application/auth/: services.py
server/src/application/user/: interfaces.py
server/src/composites/: alembic_runner.py
(+101 files in other folders)
