[tool.poetry]
name = "mindreview-analyze"
version = "0.1.0"
description = ""
authors = ["AlekseyAmp <thientaovv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
vadersentiment = "^3.3.2"
nltk = "^3.8.1"
isort = "5.13.2"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.27"
flake8 = "7.0.0"
pydantic = "^2.6.1"
pika = "^1.3.2"
aio-pika = "^9.4.0"
psycopg2-binary = "^2.9.9"
pymorphy3 = "^2.0.1"
googletrans = "4.0.0-rc1"
pytz = "^2024.1"

[tool.isort]
profile = "black"
known_first_party = "src"
known_fastapi = "fastapi"
sections=["FUTURE", "STDLIB", "THIRDPARTY", "FASTAPI", "FIRSTPARTY", "LOCALFOLDER"]
line_length = 80

[tool.flake8]
max-line-length = 80
select = ['F', 'E', 'W', ]

ignore = ['W503', ]

per-file-ignores = [
    '*/adapters/*/repositories.py:E711,E712',
    '*/adapters/*/repositories/*:E711,E712',
    '*/migrations/*:E711,E712',
    '*/alembic/versions/*:E711,E712',
    'init.py:F401',
]
count = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
